--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,14 @@ li code, p code, h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
   @apply bg-slate-200 dark:bg-slate-700 py-1 px-2 rounded my-0.5;
 }
 
+blockquote {
+  @apply px-4 my-2 border-l-4 border-gray-300 bg-gray-50 dark:border-slate-700 dark:bg-gray-900
+}
+
+blockquote p {
+  @apply text-xl text-gray-900 dark:text-white
+}
+
 .tag {
   @apply bg-slate-100 dark:bg-slate-700 py-0.5 px-1 rounded
 }
