--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
     {{ site.title }}
   </title>
 
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS 2.0"/>
-  <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
 </head>
 
 <body class="dark:bg-gray-900"></body>
@@ -29,6 +29,8 @@
     </main>
     {% include footer.html %}
   </div>
+
+  <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
 </body>
 
 </html>
