--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,8 @@
     {{ site.title }}
   </title>
 
+  <meta name="description" content="{{ site.description }}">
+
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS 2.0"/>
