--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,8 +1,7 @@
 <div class="intro text-md md:text-xl mb-5 text-center">
   <div>
-    <span class="inline mb-2">Software Engineer at <a href="https://smile.io/careers" target="_blank"
-        rel="noreferrer">Smile.io</a>.</span>
-    <span class="inline mb-2">Sharing things I learn here 👇</span>
+    <span class="block md:inline mb-2">Software Engineer at <a href="https://smile.io/careers" target="_blank" rel="noreferrer">Smile.io</a>.</span>
+    <span class="block md:inline mb-2">Sharing things I learn here 👇</span>
   </div>
 </div>
 
