deploy: cf0a1659a3f382da9bd49b1923d82955d9fc6005

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1083,6 +1083,9 @@ code.highlighter-rouge {
 }
 
 @media (min-width: 768px) {
+  .md\:inline {
+    display: inline;
+  }
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
