--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
 
   <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-  <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS 2.0"/>
+  <link rel="alternate" type="application/rss+xml" href="{{ '/feed.xml' | relative_url }}" title="RSS 2.0"/>
+  <link rel="sitemap" href="{{ 'sitemap.xml' | relative_url }}" type="application/xml" />
 </head>
 
 <body class="dark:bg-gray-900"></body>
