--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   <link rel="alternate" type="application/rss+xml" href="{{ '/feed.xml' | relative_url }}" title="RSS 2.0"/>
   <link rel="sitemap" href="{{ 'sitemap.xml' | relative_url }}" type="application/xml" />
+  {% include ga.html %}
 </head>
 
 <body class="dark:bg-gray-900"></body>
