--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -20,7 +20,7 @@
       <h2 class="font-semibold text-md">
         {{project.name}}
       </h2>
-      <div class="text-xs mt-1">
+      <div class="text-sm mt-1">
         {{project.description}}
       </div>
     </div>
