--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 
 body {
   @apply text-zinc-700 dark:text-zinc-200;
-  font-family: Inter var,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
 }
 
 .post-content a, .intro a {
