deploy: edbbc69b1b885544fd31b7f7d51a89abba42d88e

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -559,7 +559,7 @@ body {
 }
 
 body {
-  font-family: Inter var, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-family: Source Sans Pro, Helvetica Neue, Helvetica, sans-serif;
 }
 
 .intro a, .post-content a {
