--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,29 +16,34 @@
   </title>
 
   <meta name="description" content="{{ site.description }}">
+  <meta name="keywords" content="{{ site.description }}">
 
-  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-  <link rel="alternate" type="application/rss+xml" href="{{ '/feed.xml' | relative_url }}" title="RSS 2.0"/>
-  <link rel="sitemap" href="{{ 'sitemap.xml' | relative_url }}" type="application/xml" />
+  {% include open-graph-tags.html %}
+
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+  <link rel="icon" type="image/x-icon" href="{{ '/assets/images/favicon.ico' | absolute_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | absolute_url }}">
+  <link rel="alternate" type="application/rss+xml" href="{{ '/feed.xml' | absolute_url }}" title="RSS 2.0" />
+  <link rel="sitemap" href="{{ 'sitemap.xml' | absolute_url }}" type="application/xml" />
   {% include ga.html %}
 </head>
 
 <body class="dark:bg-gray-900"></body>
-  <div class="container mx-auto max-w-4xl flex flex-col min-h-screen px-4">
-    {% include header.html %}
+<div class="container mx-auto max-w-4xl flex flex-col min-h-screen px-4">
+  {% include header.html %}
 
-    <main class="flex-1">
-      {{ content }}
-    </main>
-    {% include footer.html %}
-  </div>
+  <main class="flex-1">
+    {{ content }}
+  </main>
+  {% include footer.html %}
+</div>
 
-  <script src="{{ 'assets/js/main.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/main.js' | absolute_url }}"></script>
 
-  <!-- 100% privacy-first analytics -->
-  <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-  <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+<!-- 100% privacy-first analytics -->
+<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+    referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
