Make the blog much more readable

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,20 +7,17 @@ layout: default
 </h1>
 
 <div>
-  <time class="font-medium text-sm py-3 text-gray-400">
+  <time class="font-medium text-sm py-3">
     {% if page.last_modified_at %}
       Last updated: {{ page.last_modified_at | date: '%B %e, %Y' }}
     {% else %}
       Published: {{ page.date | date: '%B %e, %Y' }}
     {% endif %}
   </time>
-  <span class="mx-2 text-gray-700 dark:text-gray-400">-</span>
 
-  <div class="text-xs mt-1 inline">
+  <div class="text-xs ml-4 mt-1 inline">
     {% for tag in page.tags %}
-    <span class="tag mr-1">
-      {{ tag }}
-    </span>{% unless forloop.last %},{% endunless %}
+    <span class="tag mr-1">{{ tag }}</span>{% unless forloop.last %},{% endunless %}
     {% endfor %}
   </div>
 </div>
