--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -12,7 +12,7 @@
 
 {% for post in posts %}
 <a href="{{ post.url | relative_url }}"
-  class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700">
+  class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-300 dark:bg-gray-800 dark:hover:bg-gray-700">
   <div class="w-full p-2">
     <h2 class="font-semibold text-md">
       {{ post.title }}
@@ -25,9 +25,7 @@
       <!-- <span class="mx-2 text-gray-700 dark:text-gray-400">-</span> -->
 
       {% for tag in post.tags %}
-      <span class="tag mr-1">
-        {{ tag }}
-      </span>{% unless forloop.last %},{% endunless %}
+      <span class="tag mr-1">{{ tag }}</span>{% unless forloop.last %},{% endunless %}
       {% endfor %}
     </div>
   </div>
