--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
   {% include ga.html %}
 </head>
 
-<body class="dark:bg-gray-900"></body>
+<body class="bg-gray-200 dark:bg-gray-900"></body>
 <div class="container mx-auto max-w-4xl flex flex-col min-h-screen px-4">
   {% include header.html %}
 
