--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,8 +6,8 @@
 @tailwind utilities;
 
 body {
-  @apply text-zinc-700 dark:text-zinc-200;
-  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
+  @apply text-gray-700 dark:text-gray-300;
+  font-family: -apple-system, BlinkMacSystemFont, Aptos, Roboto, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .post-content a, .intro a {
@@ -30,24 +30,16 @@ p {
   @apply text-black dark:text-white;
 }
 
-.post-content p {
-  @apply text-gray-700 dark:text-gray-300;
-}
-
 li code, p code, h1 code, h2 code, h3 code, h4 code, h5 code, h6 code {
   @apply bg-slate-200 dark:bg-slate-700 py-1 px-2 rounded my-0.5;
 }
 
 blockquote {
-  @apply px-4 my-2 border-l-4 border-gray-300 bg-gray-50 dark:border-slate-700 dark:bg-gray-900
-}
-
-blockquote p {
-  @apply text-xl text-gray-900 dark:text-white
+  @apply px-4 my-2 border-l-4 border-gray-300 dark:border-slate-700
 }
 
 .tag {
-  @apply bg-slate-200 dark:bg-slate-600 py-0.5 px-1 rounded
+  @apply bg-gray-500 text-gray-200 dark:bg-slate-600 py-0.5 px-1.5 rounded
 }
 
 .post-content h1 { @apply text-4xl mt-8 font-medium }
