--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -18,7 +18,7 @@
     class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-300 dark:bg-gray-800 dark:hover:bg-gray-700">
     <div class="w-full p-2">
       <h2 class="font-semibold text-md">
-        {{project.name}}
+        {{project.name}} {% include external.html size="18px" %}
       </h2>
       <div class="text-sm mt-1">
         {{project.description}}
