--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com*/
+/*! tailwindcss v3.4.4 | MIT License | https://tailwindcss.com*/
 *, :after, :before {
   border: 0 solid #e5e7eb;
   box-sizing: border-box;
@@ -8,15 +8,16 @@
   --tw-content:"";
 }
 
-html {
-  -webkit-text-size-adjust: 100%;
-  font-feature-settings: normal;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  font-variation-settings: normal;
+:host, html {
   line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+  font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-feature-settings: normal;
+  font-variation-settings: normal;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -51,7 +52,9 @@ b, strong {
 
 code, kbd, pre, samp {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
+  font-feature-settings: normal;
   font-size: 1em;
+  font-variation-settings: normal;
 }
 
 small {
@@ -80,12 +83,13 @@ table {
 }
 
 button, input, optgroup, select, textarea {
-  font-feature-settings: inherit;
   color: inherit;
   font-family: inherit;
+  font-feature-settings: inherit;
   font-size: 100%;
   font-variation-settings: inherit;
   font-weight: inherit;
+  letter-spacing: inherit;
   line-height: inherit;
   margin: 0;
   padding: 0;
@@ -95,7 +99,7 @@ button, select {
   text-transform: none;
 }
 
-[type=button], [type=reset], [type=submit], button {
+button, input:where([type=button]), input:where([type=reset]), input:where([type=submit]) {
   -webkit-appearance: button;
   background-color: transparent;
   background-image: none;
@@ -241,6 +245,10 @@ img, video {
   --tw-backdrop-opacity: ;
   --tw-backdrop-saturate: ;
   --tw-backdrop-sepia: ;
+  --tw-contain-size: ;
+  --tw-contain-layout: ;
+  --tw-contain-paint: ;
+  --tw-contain-style: ;
 }
 
 ::backdrop {
@@ -291,6 +299,10 @@ img, video {
   --tw-backdrop-opacity: ;
   --tw-backdrop-saturate: ;
   --tw-backdrop-sepia: ;
+  --tw-contain-size: ;
+  --tw-contain-layout: ;
+  --tw-contain-paint: ;
+  --tw-contain-style: ;
 }
 
 .container {
@@ -358,6 +370,10 @@ img, video {
   margin-left: 0.5rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .mr-1 {
   margin-right: 0.25rem;
 }
@@ -368,6 +384,14 @@ img, video {
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .mt-5 {
@@ -442,14 +466,28 @@ img, video {
   border-radius: 0.25rem;
 }
 
+.border-t {
+  border-top-width: 1px;
+}
+
 .border-gray-200 {
   --tw-border-opacity:1;
   border-color: rgb(229 231 235/var(--tw-border-opacity));
 }
 
+.border-gray-700 {
+  --tw-border-opacity:1;
+  border-color: rgb(55 65 81/var(--tw-border-opacity));
+}
+
 .bg-gray-100 {
   --tw-bg-opacity:1;
   background-color: rgb(243 244 246/var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity:1;
+  background-color: rgb(229 231 235/var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -477,10 +515,16 @@ img, video {
 }
 
 .py-3 {
+  padding-bottom: 0.75rem;
   padding-top: 0.75rem;
 }
 
-.pb-3, .py-3 {
+.py-7 {
+  padding-bottom: 1.75rem;
+  padding-top: 1.75rem;
+}
+
+.pb-3 {
   padding-bottom: 0.75rem;
 }
 
@@ -498,6 +542,11 @@ img, video {
 
 .align-middle {
   vertical-align: middle;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -533,11 +582,6 @@ img, video {
   font-weight: 600;
 }
 
-.text-gray-400 {
-  --tw-text-opacity:1;
-  color: rgb(156 163 175/var(--tw-text-opacity));
-}
-
 .text-gray-500 {
   --tw-text-opacity:1;
   color: rgb(107 114 128/var(--tw-text-opacity));
@@ -550,22 +594,22 @@ img, video {
 
 body {
   --tw-text-opacity:1;
-  color: rgb(63 63 70/var(--tw-text-opacity));
+  color: rgb(55 65 81/var(--tw-text-opacity));
 }
 
-:is(.dark body) {
+body:is(.dark *) {
   --tw-text-opacity:1;
-  color: rgb(228 228 231/var(--tw-text-opacity));
+  color: rgb(209 213 219/var(--tw-text-opacity));
 }
 
 body {
-  font-family: Source Sans Pro, Helvetica Neue, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Aptos, Roboto, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
 .intro a, .post-content a {
+  font-weight: 600;
   --tw-text-opacity:1;
   color: rgb(51 65 85/var(--tw-text-opacity));
-  font-weight: 600;
   text-decoration-line: underline;
 }
 
@@ -574,12 +618,12 @@ body {
   color: rgb(15 23 42/var(--tw-text-opacity));
 }
 
-:is(.dark .intro a), :is(.dark .post-content a) {
+.intro a:is(.dark *), .post-content a:is(.dark *) {
   --tw-text-opacity:1;
   color: rgb(148 163 184/var(--tw-text-opacity));
 }
 
-:is(.dark .intro a:hover), :is(.dark .post-content a:hover) {
+.intro a:hover:is(.dark *), .post-content a:hover:is(.dark *) {
   --tw-text-opacity:1;
   color: rgb(100 116 139/var(--tw-text-opacity));
 }
@@ -605,74 +649,50 @@ p {
   color: rgb(0 0 0/var(--tw-text-opacity));
 }
 
-:is(.dark .post-content h1), :is(.dark .post-content h2), :is(.dark .post-content h3), :is(.dark .post-content h4), :is(.dark .post-content h5), :is(.dark .post-content h6) {
+.post-content h1:is(.dark *), .post-content h2:is(.dark *), .post-content h3:is(.dark *), .post-content h4:is(.dark *), .post-content h5:is(.dark *), .post-content h6:is(.dark *) {
   --tw-text-opacity:1;
   color: rgb(255 255 255/var(--tw-text-opacity));
 }
 
-.post-content p {
-  --tw-text-opacity:1;
-  color: rgb(55 65 81/var(--tw-text-opacity));
-}
-
-:is(.dark .post-content p) {
-  --tw-text-opacity:1;
-  color: rgb(209 213 219/var(--tw-text-opacity));
-}
-
 h1 code, h2 code, h3 code, h4 code, h5 code, h6 code, li code, p code {
-  --tw-bg-opacity:1;
-  background-color: rgb(226 232 240/var(--tw-bg-opacity));
   border-radius: 0.25rem;
   margin-bottom: 0.125rem;
   margin-top: 0.125rem;
+  --tw-bg-opacity:1;
+  background-color: rgb(226 232 240/var(--tw-bg-opacity));
   padding: 0.25rem 0.5rem;
 }
 
-:is(.dark h1 code), :is(.dark h2 code), :is(.dark h3 code), :is(.dark h4 code), :is(.dark h5 code), :is(.dark h6 code), :is(.dark li code), :is(.dark p code) {
+h1 code:is(.dark *), h2 code:is(.dark *), h3 code:is(.dark *), h4 code:is(.dark *), h5 code:is(.dark *), h6 code:is(.dark *), li code:is(.dark *), p code:is(.dark *) {
   --tw-bg-opacity:1;
   background-color: rgb(51 65 85/var(--tw-bg-opacity));
 }
 
 blockquote {
-  --tw-border-opacity:1;
-  --tw-bg-opacity:1;
-  background-color: rgb(249 250 251/var(--tw-bg-opacity));
-  border-color: rgb(209 213 219/var(--tw-border-opacity));
   border-left-width: 4px;
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
+  --tw-border-opacity:1;
+  border-color: rgb(209 213 219/var(--tw-border-opacity));
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-:is(.dark blockquote) {
+blockquote:is(.dark *) {
   --tw-border-opacity:1;
-  --tw-bg-opacity:1;
-  background-color: rgb(17 24 39/var(--tw-bg-opacity));
   border-color: rgb(51 65 85/var(--tw-border-opacity));
 }
 
-blockquote p {
-  --tw-text-opacity:1;
-  color: rgb(17 24 39/var(--tw-text-opacity));
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-:is(.dark blockquote p) {
-  --tw-text-opacity:1;
-  color: rgb(255 255 255/var(--tw-text-opacity));
-}
-
 .tag {
-  --tw-bg-opacity:1;
-  background-color: rgb(226 232 240/var(--tw-bg-opacity));
   border-radius: 0.25rem;
-  padding: 0.125rem 0.25rem;
+  --tw-bg-opacity:1;
+  background-color: rgb(107 114 128/var(--tw-bg-opacity));
+  padding: 0.125rem 0.375rem;
+  --tw-text-opacity:1;
+  color: rgb(229 231 235/var(--tw-text-opacity));
 }
 
-:is(.dark .tag) {
+.tag:is(.dark *) {
   --tw-bg-opacity:1;
   background-color: rgb(71 85 105/var(--tw-bg-opacity));
 }
@@ -1060,40 +1080,45 @@ code.highlighter-rouge {
   background-color: rgb(229 231 235/var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:block) {
+.hover\:bg-gray-300:hover {
+  --tw-bg-opacity:1;
+  background-color: rgb(209 213 219/var(--tw-bg-opacity));
+}
+
+.dark\:block:is(.dark *) {
   display: block;
 }
 
-:is(.dark .dark\:hidden) {
+.dark\:hidden:is(.dark *) {
   display: none;
 }
 
-:is(.dark .dark\:border-gray-700) {
+.dark\:border-gray-700:is(.dark *) {
   --tw-border-opacity:1;
   border-color: rgb(55 65 81/var(--tw-border-opacity));
 }
 
-:is(.dark .dark\:bg-gray-800) {
+.dark\:bg-gray-800:is(.dark *) {
   --tw-bg-opacity:1;
   background-color: rgb(31 41 55/var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:bg-gray-900) {
+.dark\:bg-gray-900:is(.dark *) {
   --tw-bg-opacity:1;
   background-color: rgb(17 24 39/var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:text-gray-400) {
+.dark\:text-gray-400:is(.dark *) {
   --tw-text-opacity:1;
   color: rgb(156 163 175/var(--tw-text-opacity));
 }
 
-:is(.dark .dark\:hover\:bg-gray-700:hover) {
+.dark\:hover\:bg-gray-700:hover:is(.dark *) {
   --tw-bg-opacity:1;
   background-color: rgb(55 65 81/var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:hover\:bg-gray-800:hover) {
+.dark\:hover\:bg-gray-800:hover:is(.dark *) {
   --tw-bg-opacity:1;
   background-color: rgb(31 41 55/var(--tw-bg-opacity));
 }
