--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -198,3 +198,9 @@ html.dark {
 code.highlighter-rouge {
   padding: 1px 5px 1px 5px;
 }
+
+
+/* ConvertKit customizations */
+.formkit-form [data-style='clean'] {
+  padding-top: 10px !important;
+}
