Make some SEO improvements

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div class="flex justify-between my-8">
   <a href="/" class="bg-gray-100 hover:bg-gray-200 dark:bg-gray-800 dark:hover:bg-gray-700 px-4 py-3 rounded">
-    <h1 class="font-medium text-xl">
+    <p class="font-medium text-xl">
       <img src="/assets/images/computer.png" height="15" width="15" alt="lucasprag emoji" class="inline" />
       <span class="ml-2">lucasprag</span>
-    </h1>
+    </p>
   </a>
 
   <div class="flex justify-end">
