--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <footer class="mt-8">
   <div class="flex justify-center">
-    <a href="https://github.com/lucasprag"
-      aria-label="Visit my Github profile"
+    <a href="https://github.com/lucasprag" aria-label="Visit my Github profile"
       class="px-4 pb-3 pt-4 ml-1 hover:bg-gray-100 dark:hover:bg-gray-800 rounded" target="_blank">
       <!-- Github Icon -->
       <svg class="align-middle" height="25" width="25" alt="my github profile" xmlns="http://www.w3.org/2000/svg"
@@ -12,8 +11,7 @@
     </a>
 
     <a href="/feed.xml" class="px-4 pb-3 pt-4 ml-1 hover:bg-gray-100 dark:hover:bg-gray-800 rounded"
-      aria-label="Link to feed RSS"
-      target="_blank">
+      aria-label="Link to feed RSS" target="_blank">
       <!-- RSS Icon -->
       <svg class="align-middle" height="25" width="25" alt="my RSS feed" xmlns="http://www.w3.org/2000/svg"
         focusable="false" viewBox="0 0 448 512">
