--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -4,32 +4,31 @@
 {% assign posts = site.posts %}
 {% endif %}
 
-<h1 class="py-3 px-5 font-semibold text-lg border-gray-200 dark:border-gray-700">
+<h1 class="py-3 px-5 font-semibold text-2xl border-gray-200 dark:border-gray-700">
   Posts
 </h1>
 
 <div>
 
-{% for post in posts %}
-<a href="{{ post.url | relative_url }}"
-  class="flex py-1 px-3 first-of-type:mt-0 my-4 rounded bg-gray-100 hover:bg-gray-300 dark:bg-gray-800 dark:hover:bg-gray-700">
-  <div class="w-full p-2">
-    <h2 class="font-semibold text-md">
-      {{ post.title }}
-    </h2>
-    <div class="text-xs mt-1">
-      <time class="text-center font-medium py-3 mr-2 text-gray-700 dark:text-gray-400">
-        {{ post.date | date: '%B %e, %Y' }}
-      </time>
+  {% for post in posts %}
+  <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
+    <div class="w-full p-2">
+      <a href="{{ post.url | relative_url }}"
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md py-2">
+        {{ post.title }}
+      </a>
+      <div class="text-xs mt-1">
+        <time class="text-center font-medium py-3 mr-2 text-gray-700 dark:text-gray-400">
+          {{ post.date | date: '%B %e, %Y' }}
+        </time>
 
-      <!-- <span class="mx-2 text-gray-700 dark:text-gray-400">-</span> -->
+        <!-- <span class="mx-2 text-gray-700 dark:text-gray-400">-</span> -->
 
-      {% for tag in post.tags %}
-      <span class="tag mr-1">{{ tag }}</span>{% unless forloop.last %},{% endunless %}
-      {% endfor %}
+        {% for tag in post.tags %}
+        <span class="tag mr-1">{{ tag }}</span>{% unless forloop.last %},{% endunless %}
+        {% endfor %}
+      </div>
     </div>
   </div>
-</a>
-{% endfor %}
-
+  {% endfor %}
 </div>
