--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 class="font-semibold text-3xl">
+<h1 class="font-semibold text-3xl mt-5">
   {{ page.title }}
 </h1>
 
@@ -25,5 +25,3 @@ layout: default
 <div class="post-content prose mt-5">
   {{ content }}
 </div>
-
-{% include latest_project.html %}
