--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,7 +1,3 @@
-<div class="intro text-md p-5 text-center">
-  <div>
-    <span class="block md:inline mb-2">
-      Working as a Software Engineer for over 10 years, building side projects for fun.
-    </span>
-  </div>
+<div class="text-lg font-medium text-center p-5">
+  Working as a Software Engineer for over 10 years, building side projects for fun.
 </div>
