--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -395,17 +395,8 @@ img, video {
   margin-top: 1rem;
 }
 
-.my-8 {
-  margin-bottom: 2rem;
-  margin-top: 2rem;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 
 .ml-1 {
@@ -517,10 +508,6 @@ img, video {
   align-items: center;
 }
 
-.justify-end {
-  justify-content: flex-end;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -552,11 +539,6 @@ img, video {
 .border-gray-200 {
   --tw-border-opacity:1;
   border-color: rgb(229 231 235/var(--tw-border-opacity));
-}
-
-.bg-gray-100 {
-  --tw-bg-opacity:1;
-  background-color: rgb(243 244 246/var(--tw-bg-opacity));
 }
 
 .bg-gray-200 {
@@ -627,10 +609,6 @@ img, video {
   padding-top: 0.5rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
 .pt-4 {
   padding-top: 1rem;
 }
@@ -651,6 +629,11 @@ img, video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -715,95 +698,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Aptos, Roboto, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
-.btn {
-  align-items: center;
-  border-radius: 0.25rem;
-  display: inline-flex;
-  font-weight: 500;
-  justify-content: center;
-  padding: 0.5rem 1rem;
-  transition-duration: 0.2s;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-  --tw-ring-offset-shadow:var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow:var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 rgba(0, 0, 0, 0));
-  --tw-ring-offset-width:2px;
-}
-
-.btn:focus:is(.dark *) {
-  --tw-ring-offset-color:#111827;
-}
-
-.btn-primary {
-  --tw-bg-opacity:1;
-  background-color: rgb(3 105 161/var(--tw-bg-opacity));
-  --tw-text-opacity:1;
-  color: rgb(255 255 255/var(--tw-text-opacity));
-}
-
-.btn-primary:hover {
-  --tw-bg-opacity:1;
-  background-color: rgb(12 74 110/var(--tw-bg-opacity));
-}
-
-.btn-primary:focus {
-  --tw-ring-opacity:1;
-  --tw-ring-color:rgb(2 132 199/var(--tw-ring-opacity));
-}
-
-.btn-primary:is(.dark *) {
-  --tw-bg-opacity:1;
-  background-color: rgb(3 105 161/var(--tw-bg-opacity));
-}
-
-.btn-primary:hover:is(.dark *) {
-  --tw-bg-opacity:1;
-  background-color: rgb(12 74 110/var(--tw-bg-opacity));
-}
-
-.btn-primary:focus:is(.dark *) {
-  --tw-ring-opacity:1;
-  --tw-ring-color:rgb(3 105 161/var(--tw-ring-opacity));
-}
-
-.btn-secondary {
-  --tw-bg-opacity:1;
-  background-color: rgb(113 113 122/var(--tw-bg-opacity));
-  --tw-text-opacity:1;
-  color: rgb(255 255 255/var(--tw-text-opacity));
-}
-
-.btn-secondary:hover {
-  --tw-bg-opacity:1;
-  background-color: rgb(63 63 70/var(--tw-bg-opacity));
-}
-
-.btn-secondary:focus {
-  --tw-ring-opacity:1;
-  --tw-ring-color:rgb(63 63 70/var(--tw-ring-opacity));
-}
-
-.btn-secondary:is(.dark *) {
-  --tw-bg-opacity:1;
-  background-color: rgb(82 82 91/var(--tw-bg-opacity));
-}
-
-.btn-secondary:hover:is(.dark *) {
-  --tw-bg-opacity:1;
-  background-color: rgb(39 39 42/var(--tw-bg-opacity));
-}
-
-.btn-secondary:focus:is(.dark *) {
-  --tw-ring-opacity:1;
-  --tw-ring-color:rgb(39 39 42/var(--tw-ring-opacity));
-}
-
 .btn-nav {
   border-radius: 0.375rem;
   font-size: 0.875rem;
@@ -824,31 +718,29 @@ body {
   color: rgb(229 231 235/var(--tw-text-opacity));
 }
 
-.btn-nav[aria-current=page] {
+.btn-nav[aria-current=page], .post-content a {
   text-decoration-line: underline;
   text-underline-offset: 4px;
 }
 
-.intro a, .post-content a {
-  font-weight: 600;
+.post-content a {
   --tw-text-opacity:1;
-  color: rgb(51 65 85/var(--tw-text-opacity));
-  text-decoration-line: underline;
+  color: rgb(3 105 161/var(--tw-text-opacity));
 }
 
-.intro a:hover, .post-content a:hover {
+.post-content a:hover {
   --tw-text-opacity:1;
-  color: rgb(15 23 42/var(--tw-text-opacity));
+  color: rgb(14 165 233/var(--tw-text-opacity));
 }
 
-.intro a:is(.dark *), .post-content a:is(.dark *) {
+.post-content a:is(.dark *) {
   --tw-text-opacity:1;
-  color: rgb(148 163 184/var(--tw-text-opacity));
+  color: rgb(14 165 233/var(--tw-text-opacity));
 }
 
-.intro a:hover:is(.dark *), .post-content a:hover:is(.dark *) {
+.post-content a:hover:is(.dark *) {
   --tw-text-opacity:1;
-  color: rgb(100 116 139/var(--tw-text-opacity));
+  color: rgb(125 211 252/var(--tw-text-opacity));
 }
 
 p {
@@ -864,31 +756,7 @@ p {
 }
 
 .post-content img {
-  border-radius: 0.25rem;
-}
-
-.post-content h1, .post-content h2, .post-content h3, .post-content h4, .post-content h5, .post-content h6 {
-  --tw-text-opacity:1;
-  color: rgb(0 0 0/var(--tw-text-opacity));
-}
-
-.post-content h1:is(.dark *), .post-content h2:is(.dark *), .post-content h3:is(.dark *), .post-content h4:is(.dark *), .post-content h5:is(.dark *), .post-content h6:is(.dark *) {
-  --tw-text-opacity:1;
-  color: rgb(255 255 255/var(--tw-text-opacity));
-}
-
-h1 code, h2 code, h3 code, h4 code, h5 code, h6 code, li code, p code {
-  border-radius: 0.25rem;
-  margin-bottom: 0.125rem;
-  margin-top: 0.125rem;
-  --tw-bg-opacity:1;
-  background-color: rgb(226 232 240/var(--tw-bg-opacity));
-  padding: 0.25rem 0.5rem;
-}
-
-h1 code:is(.dark *), h2 code:is(.dark *), h3 code:is(.dark *), h4 code:is(.dark *), h5 code:is(.dark *), h6 code:is(.dark *), li code:is(.dark *), p code:is(.dark *) {
-  --tw-bg-opacity:1;
-  background-color: rgb(51 65 85/var(--tw-bg-opacity));
+  border-radius: 0.5rem;
 }
 
 blockquote {
@@ -903,7 +771,7 @@ blockquote {
 
 blockquote:is(.dark *) {
   --tw-border-opacity:1;
-  border-color: rgb(51 65 85/var(--tw-border-opacity));
+  border-color: rgb(31 41 55/var(--tw-border-opacity));
 }
 
 .tag {
@@ -1288,8 +1156,11 @@ code.highlighter-rouge {
   padding: 1px 5px;
 }
 
-.formkit-form [data-style=clean] {
-  padding-top: 10px !important;
+code.language-plaintext {
+  border-radius: 0.25rem;
+  margin-bottom: 0.125rem;
+  margin-top: 0.125rem;
+  padding: 0.125rem 0.25rem;
 }
 
 .first-of-type\:mt-0:first-of-type {
@@ -1299,11 +1170,6 @@ code.highlighter-rouge {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity:1;
   background-color: rgb(243 244 246/var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity:1;
-  background-color: rgb(229 231 235/var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-500:hover {
@@ -1357,11 +1223,6 @@ code.highlighter-rouge {
   border-color: rgb(55 65 81/var(--tw-border-opacity));
 }
 
-.dark\:bg-gray-800:is(.dark *) {
-  --tw-bg-opacity:1;
-  background-color: rgb(31 41 55/var(--tw-bg-opacity));
-}
-
 .dark\:bg-gray-950:is(.dark *) {
   --tw-bg-opacity:1;
   background-color: rgb(3 7 18/var(--tw-bg-opacity));
@@ -1385,11 +1246,6 @@ code.highlighter-rouge {
 .dark\:text-white:is(.dark *) {
   --tw-text-opacity:1;
   color: rgb(255 255 255/var(--tw-text-opacity));
-}
-
-.dark\:hover\:bg-gray-700:hover:is(.dark *) {
-  --tw-bg-opacity:1;
-  background-color: rgb(55 65 81/var(--tw-bg-opacity));
 }
 
 .dark\:hover\:bg-gray-800:hover:is(.dark *) {
@@ -1430,11 +1286,6 @@ code.highlighter-rouge {
   }
   .sm\:pr-0 {
     padding-right: 0;
-  }
-}
-@media (min-width: 768px) {
-  .md\:inline {
-    display: inline;
   }
 }
 
