--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,12 +24,16 @@ body {
   @apply text-sky-700 hover:text-sky-500 dark:text-sky-500 dark:hover:text-sky-300 underline underline-offset-4;
 }
 
-p {
-  @apply py-2;
+.post-content p {
+  @apply py-3 text-lg;
 }
 
-.post-content li {
+.post-content ul li {
   @apply list-disc ml-5 py-0.5;
+}
+
+.post-content ol li {
+  @apply list-decimal ml-5 py-0.5;
 }
 
 .post-content img {
@@ -501,4 +505,3 @@ code.highlighter-rouge {
 code.language-plaintext {
   @apply py-0.5 px-1 rounded my-0.5;
 }
-
