--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,3 +1,3 @@
-<div class="text-lg font-medium text-center p-5">
+<div class="text-lg font-medium text-center py-5">
   Working as a Software Engineer for over 10 years, building side projects for fun.
 </div>
