--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -4,7 +4,7 @@
 {% assign posts = site.posts %}
 {% endif %}
 
-<h1 class="py-3 px-5 font-semibold text-2xl border-gray-200 dark:border-gray-700">
+<h1 class="py-3 px-5 font-semibold text-4xl border-gray-200 dark:border-gray-700">
   Posts
 </h1>
 
@@ -14,10 +14,10 @@
   <div class="flex py-1 px-3 first-of-type:mt-0 my-2">
     <div class="w-full p-2">
       <a href="{{ post.url | relative_url }}"
-        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-md py-2">
+        class="text-stone-800 dark:text-stone-300 hover:underline hover:underline-offset-4 font-semibold text-2xl py-2">
         {{ post.title }}
       </a>
-      <div class="text-xs mt-1">
+      <div class="text-base mt-1">
         <time class="text-center font-medium py-3 mr-2 text-gray-700 dark:text-gray-400">
           {{ post.date | date: '%B %e, %Y' }}
         </time>
