--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
   <div class="container mx-auto max-w-4xl flex flex-col min-h-screen px-4">
     {% include header.html %}
 
-    <main class="flex-1">
+    <main class="flex-1 mt-1 md:mt-3">
       {{ content }}
     </main>
 
