--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ layout: default
   {{ page.title }}
 </h1>
 
-<div>
-  <time class="font-medium text-sm py-3">
+<div class="mt-3">
+  <time class="font-medium text-base py-3">
     {% if page.last_modified_at %}
     Last updated: {{ page.last_modified_at | date: '%B %e, %Y' }}
     {% else %}
@@ -15,7 +15,7 @@ layout: default
     {% endif %}
   </time>
 
-  <div class="text-xs ml-4 mt-1 inline">
+  <div class="text-base ml-4 mt-1 inline">
     {% for tag in page.tags %}
     <span class="tag mr-1">{{ tag }}</span>{% unless forloop.last %},{% endunless %}
     {% endfor %}
